updated with new version of tagmycode-java-sdk

--- a/src/main/resources/man/man1/tmc.1
+++ b/src/main/resources/man/man1/tmc.1
@@ -6,7 +6,7 @@ tmc \- tagmycode-cli
 .SH SYNOPSIS
 tmc [options]
 .SH DESCRIPTION
-Tmc - TagMyCode-Cli is a tool
+Tmc - TagMyCode-Cli is command line tool which allows you to manage TagMyCode snippets
 .SH OPTIONS
 usage: tmc
 
